--- a/index.html
+++ b/index.html
@@ -96,16 +96,16 @@
                     <li class="slider--item slider--item-center">
                       <a href="#0">
                         <div class="slider--item-image">
-                          <img src="assets/img/work-metiew-smith.jpg" alt="Metiew and Smith">
+                          <img src="assets/img/work-metiew-smith.jpg" alt="Marc Habib">
                         </div>
-                        <p class="slider--item-title">Marc Habib</p>
+                        <p class="slider--item-title">Snack <small>- Marc Habib</small></p>
                         <p class="slider--item-description">B-Boying, House, Hip Hop</p>
                       </a>
                     </li>
                     <li class="slider--item slider--item-right">
                       <a href="#0">
                         <div class="slider--item-image">
-                          <img src="assets/img/work-alex-nowak.jpg" alt="Alex Nowak">
+                          <img src="assets/img/work-alex-nowak.jpg" alt="Sarah Godard">
                         </div>
                         <p class="slider--item-title">Sarah Zeisel</p>
                         <p class="slider--item-description">L.A. style</p>
@@ -138,7 +138,7 @@
               <div class="about">
                 <div class="about--banner">
                   <h2>Partager<br>en<br>dansant,<br>un plaisir.</h2>
-                  <a href="#0">Career
+                  <a href="#0">Nos expériences
                   <span>
                     <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 150 118" style="enable-background:new 0 0 150 118;" xml:space="preserve">
                     <g transform="translate(0.000000,118.000000) scale(0.100000,-0.100000)">
@@ -167,14 +167,14 @@
                 <div class="contact--lockup">
                   <div class="modal">
                     <div class="modal--information">
-                      <p>Pawia 5, 31-154 Kraków, Poland</p>
-                      <a href="mailto:ouremail@gmail.com">ouremail@gmail.com</a>
-                      <a href="tel:+148126287560">+48 12 628 75 60</a>
+                      <p>Pôle Universitaire Léonard de Vinci, Paris, La Défense</p>
+                      <a href="mailto:leokingswalker@gmail.com">leokingswalker@gmail.com</a>
+                      <a href="tel:+33671060580">+33 6 71 06 05 80</a>
                     </div>
                     <ul class="modal--options">
-                      <li><a href="#0">Bēhance</a></li>
-                      <li><a href="#0">dribbble</a></li>
-                      <li><a href="mailto:ouremail@gmail.com">Contact Us</a></li>
+                      <li><a href="#0">Facebook</a></li>
+                      <li><a href="#0">Instagram</a></li>
+                      <li><a href="mailto:ouremail@gmail.com">Contactez nous</a></li>
                     </ul>
                   </div>
                 </div>
