--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
         <div class="l-wrapper">
           <header class="header">
             <a class="header--logo" href="#0">
-            <img src="assets/img/logo.png" alt="Global">
-            <p>LKW</p>
+            <img src="assets/img/lkw_white_transp.png" class="logo-lkw" alt="Léo King's Walker">
+            <p>Léo King's Walker</p>
           </a>
             <button class="header--cta cta">Danse</button>
             <div class="header--nav-toggle">
@@ -60,7 +60,7 @@
                   </svg>
                   <span class="btn-background"></span>
                 </button>
-                  <img src="assets/img/homepage.jpg" alt="Welcome">
+                  <img src="assets/img/homepage.jpg" class="homepage-bckg" alt="Welcome">
                 </div>
                 <div class="intro--options">
                   <a href="#0">
