update image of marc

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                     <p>B-Boying, New Style, Popping, Locking, House, Dancehall, Raggae ... La culture Hip Hop au sein de notre
                       activité !</p>
                   </a>
-                  <a href="#0">
+                  <a href="https://goo.gl/forms/AK0fWDfAEohTw8kI2">
                     <h3>Rejoignez nous !</h3>
                     <p>T'entrainer ? Venir faire partie de l'équipe ? Bien sur c'est possible !</p>
                   </a>
@@ -96,7 +96,7 @@
                     <li class="slider--item slider--item-center">
                       <a href="#0">
                         <div class="slider--item-image">
-                          <img src="assets/img/work-metiew-smith.jpg" alt="Marc Habib">
+                          <img src="https://scontent-cdt1-1.xx.fbcdn.net/v/t31.0-8/14372083_10202247497706434_1286446263003486318_o.jpg?oh=60f36d6d9f8de0a825ca7469fab16896&oe=5A126BCA" alt="Marc Habib">
                         </div>
                         <p class="slider--item-title">Snack <small>- Marc Habib</small></p>
                         <p class="slider--item-description">B-Boying, House, Hip Hop</p>
@@ -151,13 +151,13 @@
                 </div>
                 <div class="about--options">
                   <a href="#0">
-                    <h3>Winners</h3>
+                    <h3>Nos trophées</h3>
                   </a>
                   <a href="#0">
-                    <h3>Philosophy</h3>
+                    <h3>Notre philosophie</h3>
                   </a>
                   <a href="#0">
-                    <h3>History</h3>
+                    <h3>Nos évènements</h3>
                   </a>
                 </div>
               </div>
@@ -182,7 +182,7 @@
             </li>
             <li class="l-section section">
               <div class="hire">
-                <h2>You want us to do</h2>
+                <h2>Tu veux nous contacter ?</h2>
                 <!-- checkout formspree.io for easy form setup -->
                 <form class="work-request">
                   <div class="work-request--options">
@@ -195,7 +195,7 @@
                         <path d="M950,705L555,310L360,505C253,612,160,700,155,700c-6,0-44-34-85-75l-75-75l278-278L550-5l475,475c261,261,475,480,475,485c0,13-132,145-145,145C1349,1100,1167,922,950,705z"/>
                       </g>
                       </svg>
-                      App Design
+                      Postuler
                     </label>
                     <input id="opt-2" type="checkbox" value="graphic design">
                     <label for="opt-2">
@@ -205,7 +205,7 @@
                         <path d="M950,705L555,310L360,505C253,612,160,700,155,700c-6,0-44-34-85-75l-75-75l278-278L550-5l475,475c261,261,475,480,475,485c0,13-132,145-145,145C1349,1100,1167,922,950,705z"/>
                       </g>
                       </svg>
-                      Graphic Design
+                      Danser
                     </label>
                     <input id="opt-3" type="checkbox" value="motion design">
                     <label for="opt-3">
@@ -215,7 +215,7 @@
                         <path d="M950,705L555,310L360,505C253,612,160,700,155,700c-6,0-44-34-85-75l-75-75l278-278L550-5l475,475c261,261,475,480,475,485c0,13-132,145-145,145C1349,1100,1167,922,950,705z"/>
                       </g>
                       </svg>
-                      Motion Design
+                      Partenariat
                     </label>
                   </span>
                     <span class="options-b">
@@ -227,7 +227,7 @@
                         <path d="M950,705L555,310L360,505C253,612,160,700,155,700c-6,0-44-34-85-75l-75-75l278-278L550-5l475,475c261,261,475,480,475,485c0,13-132,145-145,145C1349,1100,1167,922,950,705z"/>
                       </g>
                       </svg>
-                      UX Design
+                      Demande de show
                     </label>
                     <input id="opt-5" type="checkbox" value="webdesign">
                     <label for="opt-5">
@@ -237,7 +237,7 @@
                         <path d="M950,705L555,310L360,505C253,612,160,700,155,700c-6,0-44-34-85-75l-75-75l278-278L550-5l475,475c261,261,475,480,475,485c0,13-132,145-145,145C1349,1100,1167,922,950,705z"/>
                       </g>
                       </svg>
-                      Webdesign
+                      Nous connaitre
                     </label>
                     <input id="opt-6" type="checkbox" value="marketing">
                     <label for="opt-6">
@@ -247,7 +247,7 @@
                         <path d="M950,705L555,310L360,505C253,612,160,700,155,700c-6,0-44-34-85-75l-75-75l278-278L550-5l475,475c261,261,475,480,475,485c0,13-132,145-145,145C1349,1100,1167,922,950,705z"/>
                       </g>
                       </svg>
-                      Marketing
+                      Vidéo
                     </label>
                   </span>
                   </div>
