--- a/index.html
+++ b/index.html
@@ -52,6 +52,7 @@
               <div class="intro">
                 <div class="intro--banner">
                   <h1>Plus qu'une<br> association<br>une famille.</h1>
+                  <a style="color:white;" href="https://www.youtube.com/watch?v=1LgLWuNZjzo">
                   <button class="cta">Découvrir
                   <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 150 118" style="enable-background:new 0 0 150 118;" xml:space="preserve">
                   <g transform="translate(0.000000,118.000000) scale(0.100000,-0.100000)">
@@ -60,6 +61,7 @@
                   </svg>
                   <span class="btn-background"></span>
                 </button>
+              </a>
                   <img src="assets/img/homepage.jpg" class="homepage-bckg" alt="Welcome">
                 </div>
                 <div class="intro--options">
@@ -87,10 +89,19 @@
                     <li class="slider--item slider--item-left">
                       <a href="#0">
                         <div class="slider--item-image">
-                          <img src="assets/img/work-victory.jpg" alt="Victory">
+                          <img src="https://scontent-cdt1-1.xx.fbcdn.net/v/t1.0-9/21105822_10155638082098544_9008829848633123583_n.jpg?oh=e395b93784f95c8b6174df1e445eeba2&oe=5A1B2DB0" alt="Victory">
                         </div>
                         <p class="slider--item-title">Maxime Gasnier</p>
                         <p class="slider--item-description">New Style, House, Popping</p>
+                      </a>
+                    </li>
+                    <li class="slider--item slider--item-left">
+                      <a href="#0">
+                        <div class="slider--item-image">
+                          <img src="https://scontent-cdt1-1.xx.fbcdn.net/v/t31.0-8/1048281_607737472600278_1996373904_o.jpg?oh=24ae856095cc395bb68e6cbd71d5acdf&oe=5A60CBE6" alt="Hugo Herrmann">
+                        </div>
+                        <p class="slider--item-title">Magic Mike <small>- Hugo Herrmann</small></p>
+                        <p class="slider--item-description">Hip Hop, popping</p>
                       </a>
                     </li>
                     <li class="slider--item slider--item-center">
@@ -105,10 +116,19 @@
                     <li class="slider--item slider--item-right">
                       <a href="#0">
                         <div class="slider--item-image">
-                          <img src="assets/img/work-alex-nowak.jpg" alt="Sarah Godard">
+                          <img src="https://scontent-cdt1-1.xx.fbcdn.net/v/t1.0-9/20479781_10211209362883865_8867199530065662060_n.jpg?oh=2a7ea7fc65921705c1dd11924ae961fb&oe=5A537028" alt="Sarah Godard">
                         </div>
                         <p class="slider--item-title">Sarah Zeisel</p>
                         <p class="slider--item-description">L.A. style</p>
+                      </a>
+                    </li>
+                    <li class="slider--item slider--item-right">
+                      <a href="#0">
+                        <div class="slider--item-image">
+                          <img src="https://scontent-cdt1-1.xx.fbcdn.net/v/t31.0-8/12698549_10207213785217066_2275435704558265865_o.jpg?oh=694ffec5d4c69167e9a56342c38477e8&oe=5A48C8ED" alt="SoulGoku">
+                        </div>
+                        <p class="slider--item-title">SoulGoku</p>
+                        <p class="slider--item-description">Popping</p>
                       </a>
                     </li>
                   </ul>
@@ -138,7 +158,7 @@
               <div class="about">
                 <div class="about--banner">
                   <h2>Partager<br>en<br>dansant,<br>un plaisir.</h2>
-                  <a href="#0">Nos expériences
+                  <a href="https://www.youtube.com/channel/UC7YRk0XWjGoCu8YtEJq41Zw">Nos vidéos
                   <span>
                     <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 150 118" style="enable-background:new 0 0 150 118;" xml:space="preserve">
                     <g transform="translate(0.000000,118.000000) scale(0.100000,-0.100000)">
@@ -147,9 +167,9 @@
                     </svg>
                   </span>
                 </a>
-                  <img src="assets/img/about-visual.png" alt="About Us">
+                  <!--<img style="width:392px;height:631px;" src="https://scontent-cdt1-1.xx.fbcdn.net/v/t31.0-8/18620622_1301957406578762_8212913725487231141_o.jpg?oh=3c3384b72ae657c325478913a4ff6518&oe=5A17B177" alt="About Us">-->
                 </div>
-                <div class="about--options">
+                <!--<div class="about--options">
                   <a href="#0">
                     <h3>Nos trophées</h3>
                   </a>
@@ -159,7 +179,7 @@
                   <a href="#0">
                     <h3>Nos évènements</h3>
                   </a>
-                </div>
+                </div> -->
               </div>
             </li>
             <li class="l-section section">
@@ -182,86 +202,12 @@
             </li>
             <li class="l-section section">
               <div class="hire">
-                <h2>Tu veux nous contacter ?</h2>
+                <h2>On recrute pour l'année 2017-2018</h2>
                 <!-- checkout formspree.io for easy form setup -->
-                <form class="work-request">
-                  <div class="work-request--options">
-                    <span class="options-a">
-                    <input id="opt-1" type="checkbox" value="app design">
-                    <label for="opt-1">
-                      <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
-                      viewBox="0 0 150 111" style="enable-background:new 0 0 150 111;" xml:space="preserve">
-                      <g transform="translate(0.000000,111.000000) scale(0.100000,-0.100000)">
-                        <path d="M950,705L555,310L360,505C253,612,160,700,155,700c-6,0-44-34-85-75l-75-75l278-278L550-5l475,475c261,261,475,480,475,485c0,13-132,145-145,145C1349,1100,1167,922,950,705z"/>
-                      </g>
-                      </svg>
-                      Postuler
-                    </label>
-                    <input id="opt-2" type="checkbox" value="graphic design">
-                    <label for="opt-2">
-                      <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
-                      viewBox="0 0 150 111" style="enable-background:new 0 0 150 111;" xml:space="preserve">
-                      <g transform="translate(0.000000,111.000000) scale(0.100000,-0.100000)">
-                        <path d="M950,705L555,310L360,505C253,612,160,700,155,700c-6,0-44-34-85-75l-75-75l278-278L550-5l475,475c261,261,475,480,475,485c0,13-132,145-145,145C1349,1100,1167,922,950,705z"/>
-                      </g>
-                      </svg>
-                      Danser
-                    </label>
-                    <input id="opt-3" type="checkbox" value="motion design">
-                    <label for="opt-3">
-                      <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
-                      viewBox="0 0 150 111" style="enable-background:new 0 0 150 111;" xml:space="preserve">
-                      <g transform="translate(0.000000,111.000000) scale(0.100000,-0.100000)">
-                        <path d="M950,705L555,310L360,505C253,612,160,700,155,700c-6,0-44-34-85-75l-75-75l278-278L550-5l475,475c261,261,475,480,475,485c0,13-132,145-145,145C1349,1100,1167,922,950,705z"/>
-                      </g>
-                      </svg>
-                      Partenariat
-                    </label>
-                  </span>
-                    <span class="options-b">
-                    <input id="opt-4" type="checkbox" value="ux design">
-                    <label for="opt-4">
-                      <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
-                      viewBox="0 0 150 111" style="enable-background:new 0 0 150 111;" xml:space="preserve">
-                      <g transform="translate(0.000000,111.000000) scale(0.100000,-0.100000)">
-                        <path d="M950,705L555,310L360,505C253,612,160,700,155,700c-6,0-44-34-85-75l-75-75l278-278L550-5l475,475c261,261,475,480,475,485c0,13-132,145-145,145C1349,1100,1167,922,950,705z"/>
-                      </g>
-                      </svg>
-                      Demande de show
-                    </label>
-                    <input id="opt-5" type="checkbox" value="webdesign">
-                    <label for="opt-5">
-                      <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
-                      viewBox="0 0 150 111" style="enable-background:new 0 0 150 111;" xml:space="preserve">
-                      <g transform="translate(0.000000,111.000000) scale(0.100000,-0.100000)">
-                        <path d="M950,705L555,310L360,505C253,612,160,700,155,700c-6,0-44-34-85-75l-75-75l278-278L550-5l475,475c261,261,475,480,475,485c0,13-132,145-145,145C1349,1100,1167,922,950,705z"/>
-                      </g>
-                      </svg>
-                      Nous connaitre
-                    </label>
-                    <input id="opt-6" type="checkbox" value="marketing">
-                    <label for="opt-6">
-                      <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
-                      viewBox="0 0 150 111" style="enable-background:new 0 0 150 111;" xml:space="preserve">
-                      <g transform="translate(0.000000,111.000000) scale(0.100000,-0.100000)">
-                        <path d="M950,705L555,310L360,505C253,612,160,700,155,700c-6,0-44-34-85-75l-75-75l278-278L550-5l475,475c261,261,475,480,475,485c0,13-132,145-145,145C1349,1100,1167,922,950,705z"/>
-                      </g>
-                      </svg>
-                      Vidéo
-                    </label>
-                  </span>
-                  </div>
-                  <div class="work-request--information">
-                    <div class="information-name">
-                      <input id="name" type="text" spellcheck="false">
-                      <label for="name">Name</label>
-                    </div>
-                    <div class="information-email">
-                      <input id="email" type="email" spellcheck="false">
-                      <label for="email">Email</label>
-                    </div>
-                  </div>
-                  <input type="submit" value="Send Request">
+                <form class="work-request" action="https://goo.gl/forms/AK0fWDfAEohTw8kI2">
+                  <a style="color:white;" href="https://goo.gl/forms/AK0fWDfAEohTw8kI2">
+                    <input type="submit" value="Postuler">
+                  </a>
                 </form>
               </div>
             </li>
